Spacing issues fixed. Jersey focus started
- Home page intro added
- banner fixed

--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,22 @@ h1 {
   color: #333;
 }
 
+.text-blue {
+  color: #184866;
+}
+
+.text-red {
+  background-color: #933;
+}
+
+.bg-dg {
+  background-color: #333;
+}
+
+.btn {
+  transition: background-color .5s, border-color .5s, color .5s;
+}
+
 .shadow {
   box-shadow: 1px 1px 3px rgba(0, 0, 0, .5);
 }
@@ -57,6 +73,18 @@ h1 {
 
 .rule {
   border-bottom: 1px solid #333;
+}
+
+.rule-2px {
+  border-bottom: 2px solid #333;
+}
+
+.rule-light {
+  border-bottom: 1px solid #ddd;
+}
+
+.rule-light-2px {
+  border-bottom: 2px solid #ddd;
 }
 
 .indent {
@@ -124,7 +152,7 @@ h1 {
   width: 100%;
   height: 100vh;
   left: -1000rem;
-  top: 3.54875rem;
+  top: 4.849375rem;
   background-color: rgba(0, 0, 0, 0);
   transition: background-color .5s;
 }
@@ -138,7 +166,7 @@ h1 {
 .nav-slide {
   position: fixed;
   left: -1000rem;
-  top: 3.54875rem;
+  top: 4.849375rem;
   background-color: #333;
   width: 50%;
   height: 100vh;
@@ -164,25 +192,56 @@ h1 {
 }
 
 main {
-  margin: 3.54875rem 0 0;
+  margin: 4.849375rem 0 0;
 }
 
 /* ----- =Home ----- */
 
-.overlay {
+.banner-body {
   background-color: #333;
 }
 
 .btn-ban {
   background-color: #ddd;
   border-color: #ddd;
-  transition: background-color .25s, border-color .25s;
 }
 
 .btn-ban:hover {
-  background-color: #333;
-  border-color: #ddd;
+  background-color: #933;
+  border-color: #933;
   color: #ddd;
+}
+
+.btn-ban:active {
+  background-color: #933;
+  border-color: #933;
+  color: #ddd;
+}
+
+.btn-ban:focus {
+  background-color: #933;
+  border-color: #933;
+  color: #ddd;
+}
+
+.btn-welcome {
+  background-color: #ddd;
+  border-color: #ddd;
+}
+
+.btn-welcome:hover {
+  background-color: #184866;
+  border-color: #ddd;
+}
+
+.btn-welcome:active {
+  background-color: #184866;
+  border-color: #ddd;
+}
+
+.btn-welcome:focus {
+  background-color: #184866;
+  border-color: #ddd;
 }
 
 .prev-hov figcaption {
@@ -231,13 +290,13 @@ main {
 
 .btn-portfolio {
   background-color: #184866;
-  border: none;
+  border-color: #184866;
   color: #fff;
 }
 
 .btn-portfolio:hover {
-  background-color: #12364C;
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, .5);
+  color: #12364C;
+  background-color: #fff;
 }
 
 /* ----- =Bio ----- */
@@ -276,10 +335,6 @@ main {
     position: relative;
   }
 
-  .nav {
-    text-align: right;
-  }
-
   main {
     margin: 0;
   }
@@ -302,25 +357,23 @@ main {
     position: relative;
   }
 
-  .overlay {
-    background-color: rgba(0, 0, 0, .5);
-    width: 100%;
-    height: 100%;
+  .banner-body {
     position: absolute;
     top: 0;
-  }
-
-  .banner-body {
+    left: 0;
+    width: 100%;
+    height: 100%;
     text-align: right;
-    position: absolute;
-    max-width: 30em;
-    top: 50%;
-    right: 40%;
-    transform: translateX(50%) translateY(-50%);
+    background-color: rgba(0, 0, 0, .5);
   }
 
-  .btn-ban:hover {
-    border-color: #333;
+  .banner-text {
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    padding-left: 50%;
   }
 
 }
